--- a/index.html
+++ b/index.html
@@ -1,39 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
-   <title> Moje první ůžasná stránka </title>
+    <link rel="stylesheet" href="styles.css">
+    <title> my favourite type of books </title>
   </head>
   <body>
-   <h1> Ahoj, vítejte ve Vodafonu! </h1>
-   <img src= "rose.jpeg"  alt="kytka">
-   <a href= "hhtps://www.google.cz"> odkaz na google </a>
-   <div> 
+    <h1 id=prvn9 >this is a page all about my books </h1>
+    <img src= "book.jpg"  alt="my favorite books">
+	<div class= "help" >
+	  <ul>
+        <li> <a href= "https://www.amazon.com/List-Cages-Robin-Roe/dp/1484763807"> buy A list of cages </a> </li>
+	    <li> <a href= "https://www.amazon.com/Every-Last-Tamara-Ireland-Stone/dp/1484705270">buy Every last word </a> </li>
+	  <ul>
+    </div>
+    <div class= "fight help" > 
       <ol>
-	       <li><b> první odrážka</b> </li>
-		   <li><i> druhá odrážka </i></li>
-		</ol>
+	     <li> <b> A list of cages </b> </li>
+		 <li> <i> Every last word </i> </li>
+	  </ol>
 	</div>
-    <table>
+    <table border="1" class="fight" >
       <thead>
 	     <tr> 
-		    <th> Jmeno</th>
-		    <th> přijmení </th>
-		    <th> Věk </th>
+		    <th> title</th>
+		    <th> Author </th>
+			<th> rating </th>
 		 </tr>
        </thead>
        <tbody>
 	        <tr>
-			 <td>Tomáš </td>
-	         <td> omáčka </td>
-			 <td> 19 </td>
+			 <td>A list of cages </td>
+	         <td> Robin Roe </td>
+			 <td> 8.5/10 </td>
 			</tr>
 			<tr>
-			  <td>Marek </td>
-	          <td> Dohnal </td>
-			  <td> 19 </td>
+			  <td>Every last word </td>
+	          <td> Tamara Ireland Stone </td>
+			  <td> 7/10 </td>
 			</tr>
        </tbody>
-    </table>	  
-  </body>
+	   <p> This is one of mine favorite books. it is a comtemporary <span>novel</span> that deals with the problem of child abuse a bulling. The main character is a boy that's also an orphan and is very shy. <p>
+     </table>
+     <img class=resize src="1st book.jpg" alt="A list of cages">
+     <img class=resize src="2nd book.jpg" alt="Every last word">	 
+	
+  </body> 
  
 </html>
